manifests/ingressroute-kargo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kargo-api
  namespace: kargo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kargo.localhost`)
      kind: Rule
      services:
        - name: kargo-api
          port: 80
