manifests/ingressroute-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway # Name of the Gateway that Traefik creates when you enable the Gateway API provider
      sectionName: websecure
      namespace: traefik
  hostnames:
    - "monitoring.localhost"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-prometheus
        port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway # Name of the Gateway that Traefik creates when you enable the Gateway API provider
      sectionName: websecure
      namespace: traefik
  hostnames:
    - "grafana.localhost"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-grafana
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway # Name of the Gateway that Traefik creates when you enable the Gateway API provider
      sectionName: websecure
      namespace: traefik
  hostnames:
    - "alertmanager.localhost"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-alertmanager
        port: 9093
